--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@aws-sdk/client-s3": "^3.450.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.2",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
@@ -26,10 +28,10 @@
     "next-auth": "^4.24.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "superjson": "^1.13.1",
+    "use-places-autocomplete": "^4.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
