--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "next-auth": "^4.24.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-spring": "^9.7.3",
     "superjson": "^1.13.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
