--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.7.1",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
+    "@sendgrid/mail": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
@@ -29,6 +30,7 @@
     "mongodb": "^6.2.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.4",
+    "nodemailer": "^6.9.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
