--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-auth": "^4.24.4",
     "nodemailer": "^6.9.8",
     "react": "18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
