--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.33",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
